@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+    - authority= parameter to override Authority's authority param.
+
 0.21 2010-06-21 17:10:32
 
     - Fix POD typo pointed out by Hinrik
